# latch

./: .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  openapi.yaml
browser/: package-lock.json  package.json  wxt.config.ts
browser/entrypoints/options/: App.vue  index.html  main.ts
browser/entrypoints/popup/: App.vue  index.html
browser/src/components/: BookmarkForm.vue  BookmarkList.vue  ConnectionStatus.vue
browser/src/composables/: useCurrentTab.ts  useLatchApi.ts  useSettings.ts
browser/src/lib/: errors.ts  tags.ts
browser/src/styles/: app.css
raycast/: package-lock.json  package.json  raycast-env.d.ts  tsconfig.json
raycast/src/: add.tsx  search.tsx  tags.tsx
raycast/src/components/: BookmarkListView.tsx
raycast/src/lib/: api.ts
scripts/: release.sh
server/: Cargo.toml
server/src/: browser_import.rs  client_packages.rs  config.rs  error.rs  main.rs  models.rs  paths.rs  routes.rs  search.rs  service.rs  store.rs  sync.rs
shared/: types.ts
